--- a/01.html
+++ b/01.html
@@ -3,17 +3,44 @@
 
 <head>
     <meta charset="utf-8">
-    <title>very simple DApps</title>
-    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js"></script>
-    <script src="./abi.js"></script>
-    <script src="./reader.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>bookonchain_bookowner</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral:300,300i,400,400i">
+    <link rel="stylesheet" href="assets/css/-Identity-Page-BS4-.css">
 </head>
 
-<body>
-<h1>web site for owner</h1>
-<p>対応ブラウザ：chrome + metamask</p>
-<p>F12キーを押してスマートコントラクトからの情報を確認</p>
-
+<body style="background-color: rgb(208,208,208);">
+    <div class="container-fluid">
+        <div class="row flex-lg-row-reverse mh-100vh">
+            <div class="col-lg-6 d-flex align-items-end mh-50vh" style="background-size: contain;background-repeat: no-repeat;background-image: url(&quot;assets/img/bookonchain_cover_small.png&quot;);background-position: center;">
+                <p class="ml-auto small text-white"><br></p>
+            </div>
+            <div class="col-lg-6 d-lg-flex align-items-lg-center text-center px-sm-5 py-5 shadow">
+                <div>
+                    <h1 class="text-secondary font-weight-light">Book on chain</h1>
+                    <h2 class="spectral text-color font-weight-light"><em>by Nandemo Token</em><br></h2>
+                    <hr class="my-5">
+                    <p class="text-secondary spectral font20" style="margin: 0px 0px 0px;font-size: 15px;">もしあなたがこの本の所有者であれば<br>それをブロックチェーンに登録すると<br>特別なリンクが追加で表示されます<br></p>
+                    <hr class="mt-5 mb-4">
+                    <div class="social-icons text-center"><a class="d-inline-block" data-toggle="tooltip" data-original-title="nandemotoken.com" href="http://www.nandemotoken.com" target="_blank"><i class="icon ion-earth"></i></a><a class="d-inline-block" data-toggle="tooltip" data-original-title="Facebook"
+                            href="https://www.facebook.com/nandemotoken" target="_blank"><i class="icon ion-social-facebook"></i></a><a class="d-inline-block" data-toggle="tooltip" data-original-title="Twitter" href="https://twitter.com/NandemoToken" target="_blank"><i class="icon ion-social-twitter"></i></a></div>
+                    <div
+                        id="special" class="social-icons text-center" style="margin: 0px 0px 20px;"><a id="s" class="d-inline-block" data-toggle="tooltip" data-original-title="slack" href="https://bookonchain.slack.com" target="_blank"><i class="fab fa-slack-hash"></i></a><a id="g" class="d-inline-block" data-toggle="tooltip" data-original-title="github"
+                            href="https://github.com/nandemotoken" target="_blank"><i class="icon ion-social-github"></i></a><a id="m" class="d-inline-block" data-toggle="tooltip" data-original-title="mailto" href="mailto:nandemotoken@gmail.com"><i class="icon ion-ios-email-outline"></i></a>
+                        <a
+                            id="c" class="d-inline-block" data-toggle="tooltip" data-original-title="Certification" href="http://www.bookonchain.tech:8080/" target="_blank"><i class="icon ion-ios-compose-outline"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/-Identity-Page-BS4-.js"></script>
+    <script src="assets/js/link_hider.js"></script>
 </body>
 
 </html>
