--- a/01.html
+++ b/01.html
@@ -24,6 +24,7 @@
                     <h2 class="spectral text-color font-weight-light"><em>by Nandemo Token</em><br></h2>
                     <hr class="my-5">
                     <p class="text-secondary spectral font20" style="margin: 0px 0px 0px;font-size: 15px;">もしあなたがこの本の所有者であれば<br>それをブロックチェーンに登録すると<br>特別なリンクが追加で表示されます<br></p>
+<!-- book owner or reverse engineer can access the link -->
                     <hr class="mt-5 mb-4">
                     <div class="social-icons text-center"><a class="d-inline-block" data-toggle="tooltip" data-original-title="nandemotoken.com" href="http://www.nandemotoken.com" target="_blank"><i class="icon ion-earth"></i></a><a class="d-inline-block" data-toggle="tooltip" data-original-title="Facebook"
                             href="https://www.facebook.com/nandemotoken" target="_blank"><i class="icon ion-social-facebook"></i></a><a class="d-inline-block" data-toggle="tooltip" data-original-title="Twitter" href="https://twitter.com/NandemoToken" target="_blank"><i class="icon ion-social-twitter"></i></a></div>
