this is book owner system

--- a/01.html
+++ b/01.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral:300,300i,400,400i">
     <link rel="stylesheet" href="assets/css/-Identity-Page-BS4-.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/-Identity-Page-BS4-.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js"></script>
+    <script src="assets/js/link_hider.js"></script>
+    <script src="./abi.js"></script>
+    <script src="./reader.js"></script>
 </head>
 
 <body style="background-color: rgb(208,208,208);">
@@ -38,10 +45,6 @@
         </div>
     </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/-Identity-Page-BS4-.js"></script>
-    <script src="assets/js/link_hider.js"></script>
 </body>
 
 </html>
